@@ -154,6 +154,7 @@ wxMSW:
 - Fixed invisible CHM tooltip text bug when window text colour is black.
 - Automatically adjust toolbar's tool size if the provided bitmaps
   don't fit into the default size.
+- Don't generate EVT_LISTBOX_DCLICK events with incorrect indices.
 
 
 wxMSW/CE:
